fixed frames on sprites, before jump fix

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   border: 5px solid white;
 }
 #playerImage,
+#playerImageJump,
 #backgroundImage,
 #enemyImage {
   display: none;
